# duel-shared

./: .gitignore  .vercelignore  DEPLOYMENT.md  DEPLOYMENT_QUICKSTART.md  Procfile  README.md  env.example  pyproject.toml  railway.json  requirements.txt  setup.py  vercel.json
backend/: __init__.py
backend/api/: __init__.py  dependencies.py  main.py
backend/api/middleware/: __init__.py  error_handler.py
backend/api/models/: __init__.py  responses.py
backend/config/: __init__.py  settings.py
backend/database/: __init__.py  connection.py  pool.py
backend/etl/: __init__.py  __main__.py  pipeline.py
backend/models/: __init__.py  clean.py  raw.py
backend/orchestration/: __init__.py  __main__.py  deploy.py  deploy_flows.py  prefect_flows.py
frontend/: .env.example  README.md  next.config.js  package-lock.json  package.json
frontend/components/: ErrorBoundary.tsx  LeaderboardTable.tsx
frontend/components/charts/: BrandChart.tsx  PlatformChart.tsx
frontend/components/etl/: ETLRunHistory.tsx  ETLStatusCard.tsx
frontend/components/layout/: Layout.tsx  PageHeader.tsx  Sidebar.tsx
frontend/components/ui/: Card.tsx  ConfirmModal.tsx  FilterBar.tsx  InsightCard.tsx  Loading.tsx  MetricsExplainer.tsx  Pagination.tsx  PerformanceBadge.tsx  StatCard.tsx
frontend/contexts/: CurrencyContext.tsx
frontend/hooks/: useChampionSettings.ts  useOutlierSettings.ts  useSegmentSettings.ts
frontend/lib/: api.ts  championSettings.ts  outlierSettings.ts  segmentSettings.ts
frontend/pages/: _app.tsx  advocates.tsx  brands.tsx  data-quality.tsx  imports.tsx  index.tsx
frontend/pages/advocates/: [accountId].tsx
frontend/pages/analytics/: champions.tsx  index.tsx  outliers.tsx  platform-fit.tsx  segments.tsx  settings.tsx
frontend/pages/analytics/champions/: settings.tsx
frontend/styles/: globals.css
schema/: analytics_queries.sql  drop_schema.sql  schema.sql
scripts/: deploy-prefect.bat  install-dependencies.bat  install-prefect.bat  run-etl.bat  start-advocacy-platform.bat
tests/: test_advocacy_platform.py  test_db_connection.py
tools/: analyze_dataset.py  check_import_history.py  check_schema.py  delete_all_data.py  fix_broken_json.py  verify_impact_score.py
